# Find-the-divisors-

./: README.md  pyproject.toml
app/: app.py
