[tool.poetry]
name = "find-the-divisor"
version = "1.0.0"
description = ""
authors = ["Siyabonga Thwala <siyabongat@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyodbc = "^4.0.30"
pylint = "^2.4.4"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
